# vibesec-scanner

./: Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_scanner.py
vibesec/: __init__.py  api.py  cli.py  rules.py  scanner.py
