[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vibesec-scanner"
version = "0.1.0"
description = "Security scanner for AI-generated web applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.18,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx>=0.28,<1"]

[project.scripts]
vibesec = "vibesec.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
